# Setu

./: Cargo.toml  README.md
crates/setu-core/: Cargo.toml
crates/setu-core/src/: config.rs  lib.rs  shard.rs
crates/setu-router/: Cargo.toml
crates/setu-router-core/: Cargo.toml
crates/setu-router-core/src/: error.rs  lib.rs  shard.rs  types.rs  unified_router.rs
crates/setu-router-core/src/strategy/: consistent_hash.rs  load_balanced.rs  mod.rs  object_shard.rs  subnet_shard.rs
crates/setu-router/src/: lib.rs  router.rs  shard.rs  solver.rs  strategy.rs  tests.rs
scripts/: run_demo.sh
setu-router/examples/: router_demo.rs
setu-router/src/: lib.rs  pending_queue.rs  quick_check.rs
setu-validator/: Cargo.toml
setu-validator/src/: lib.rs  main.rs
setu-validator/tests/: end_to_end_test.rs  integration_test.rs
types/src/: coin.rs  event.rs  lib.rs  relation.rs  sbt_view.rs
