[package]
name = "setu-router"
version.workspace = true
edition.workspace = true
description = "Transaction routing module for Setu - routes transactions from validators to appropriate solvers"

[dependencies]
# Internal dependencies
core-types = { path = "../core-types" }
setu-types = { path = "../../types" }
setu-core = { path = "../setu-core" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { workspace = true }
serde_json = "1.0"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
parking_lot = "0.12"
uuid = { version = "1.6", features = ["v4"] }

# Hashing for consistent routing
blake3 = "1.5"

[dev-dependencies]
tokio-test = "0.4"
